Fix ModelNeutralState counters for USS types

The counters must be updated analogously to how
DirectoryCommitContribution::ProcessCommitResponse() does it.

AFAIK, the bug affects tests and debug UIs only.

Bug: 836289
Change-Id: I91b519bda573133305f31524a0ecb328f7748a11
Reviewed-on: https://chromium-review.googlesource.com/1033872
Commit-Queue: Mikel Astiz <mastiz@chromium.org>
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554716}