components/sync/engine_impl/model_type_worker_unittest.cc
@@ -321,9 +321,10 @@ class ModelTypeWorkerTest : public ::testing::Test {
 
   void TriggerTypeRootUpdateFromServer() {
     SyncEntity entity = server()->TypeRootUpdate();
-    worker()->ProcessGetUpdatesResponse(
-        server()->GetProgress(), server()->GetContext(), {&entity}, nullptr);
-    worker()->PassiveApplyUpdates(nullptr);
+    worker()->ProcessGetUpdatesResponse(server()->GetProgress(),
+                                        server()->GetContext(), {&entity},
+                                        &status_controller_);
+    worker()->PassiveApplyUpdates(&status_controller_);
   }
 
   void TriggerPartialUpdateFromServer(int64_t version_offset,
@@ -337,15 +338,16 @@ class ModelTypeWorkerTest : public ::testing::Test {
                     entity.mutable_specifics());
     }
 
-    worker()->ProcessGetUpdatesResponse(
-        server()->GetProgress(), server()->GetContext(), {&entity}, nullptr);
+    worker()->ProcessGetUpdatesResponse(server()->GetProgress(),
+                                        server()->GetContext(), {&entity},
+                                        &status_controller_);
   }
 
   void TriggerUpdateFromServer(int64_t version_offset,
                                const std::string& tag,
                                const std::string& value) {
     TriggerPartialUpdateFromServer(version_offset, tag, value);
-    worker()->ApplyUpdates(nullptr);
+    worker()->ApplyUpdates(&status_controller_);
   }
 
   void TriggerTombstoneFromServer(int64_t version_offset,
@@ -358,14 +360,15 @@ class ModelTypeWorkerTest : public ::testing::Test {
                     entity.mutable_specifics());
     }
 
-    worker()->ProcessGetUpdatesResponse(
-        server()->GetProgress(), server()->GetContext(), {&entity}, nullptr);
-    worker()->ApplyUpdates(nullptr);
+    worker()->ProcessGetUpdatesResponse(server()->GetProgress(),
+                                        server()->GetContext(), {&entity},
+                                        &status_controller_);
+    worker()->ApplyUpdates(&status_controller_);
   }
 
   // Simulates the end of a GU sync cycle and tells the worker to flush changes
   // to the processor.
-  void ApplyUpdates() { worker()->ApplyUpdates(nullptr); }
+  void ApplyUpdates() { worker()->ApplyUpdates(&status_controller_); }
 
   // Delivers specified protos as updates.
   //
@@ -374,8 +377,9 @@ class ModelTypeWorkerTest : public ::testing::Test {
   // protocol. Try to use the other, higher level methods if possible.
   void DeliverRawUpdates(const SyncEntityList& list) {
     worker()->ProcessGetUpdatesResponse(server()->GetProgress(),
-                                        server()->GetContext(), list, nullptr);
-    worker()->ApplyUpdates(nullptr);
+                                        server()->GetContext(), list,
+                                        &status_controller_);
+    worker()->ApplyUpdates(&status_controller_);
   }
 
   // By default, this harness behaves as if all tasks posted to the model
@@ -420,7 +424,7 @@ class ModelTypeWorkerTest : public ::testing::Test {
     sync_pb::ClientToServerResponse response =
         server()->DoSuccessfulCommit(message);
 
-    contribution->ProcessCommitResponse(response, nullptr);
+    contribution->ProcessCommitResponse(response, &status_controller_);
     contribution->CleanUp();
   }
 
@@ -488,6 +492,8 @@ class ModelTypeWorkerTest : public ::testing::Test {
   base::ObserverList<TypeDebugInfoObserver> type_observers_;
 
   std::unique_ptr<NonBlockingTypeDebugInfoEmitter> emitter_;
+
+  StatusController status_controller_;
 };
 
 // Requests a commit and verifies the messages sent to the client and server as
